# Alpha-fix

./: .gitignore  Alpha Fix Sandbox.bat  Alpha Fix Sandbox.lnk  Alpha Fix Sandbox.vbs  Alpha Fix.bat  Alpha Fix.lnk  Alpha Fix.vbs  CLAUDE.md  History.txt  Install Shortcuts.ps1  LICENSE  Partly success.txt  Perplexity_Source_Bundle.md  Planning.txt  README.md  compare_subject.py  extract_overlays.py  pyproject.toml  test_rad.py
.sync/: README.md
alpha_fix/: __init__.py  cli.py  config.py  constellation.py  error_report.py  exporters.py  gui.py  pipeline.py  sample_editor.py  samples.py  service.py
alpha_fix_2/: __init__.py  cli.py  config.py  gui.py  pipeline.py  radfield.py  service.py
coordination/: APP_IMPROVEMENTS.md  AUDIT_2026-06-11_claude.md  DECISIONS.md  HANDOFF_TEMPLATE.md  HANDOVER_2026-07-17_claude.md  MISTLE_FINDINGS.md  STATUS_BOARD.md  SWEEP2_COMMENTARY.md  SWEEP2_FINDINGS.md  SWEEP2_SWARM_REPORT.md  TEAM_PROTOCOL.md  claude-journal.md
documents/: CONSTELLATION_AND_SWEEP2.md  FFMPEG_Export_Code.md
install/: build_installer.ps1  build_sandbox_installer.ps1  installer.iss  installer_sandbox.iss  run_production.py  run_sandbox.py
scratch/: analyze_bl.py  audit_existing.py  batch_process.py  check_borders.py  check_individual_file.py  check_mae_vals.py  check_rect_corners.py  check_vignette.py  comb_fit.py  compare_top_bottom_phases.py  copy_frame.py  debug_grateful.py  delete_failed.py  enclosure_probe.py  enclosure_viz.py  find_all_transitions.py  find_best_fit_each_corner.py  find_best_fit_each_corner_fast.py  find_checkerboard.py  fit_bl_only.py  (+76 more)
(+20 files in other folders)
