[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alpha-fix"
version = "0.1.0"
description = "Production and sandbox desktop apps for extracting OBS-ready subject and overlay mattes from video."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.1,<3",
  "opencv-python>=4.10,<5",
  "Pillow>=11,<12",
]

[project.scripts]
alpha-fix = "alpha_fix.cli:main"
alpha-fix-2 = "alpha_fix_2.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["alpha_fix", "alpha_fix_2"]

[tool.pytest.ini_options]
testpaths = ["tests"]

